--- a/requirements.txt
+++ b/requirements.txt
@@ -1,12 +1,30 @@
+aiofiles==24.1.0
+aiogram==3.22.0
+aiohappyeyeballs==2.6.1
+aiohttp==3.12.15
+aiosignal==1.4.0
+annotated-types==0.7.0
 asgiref==3.9.1
+attrs==25.3.0
 black==25.1.0
+certifi==2025.8.3
 click==8.2.1
 Django==5.2.5
 djangorestframework==3.16.1
+frozenlist==1.7.0
+idna==3.10
+magic-filter==1.0.12
+multidict==6.6.4
 mypy_extensions==1.1.0
 packaging==25.0
 pathspec==0.12.1
 platformdirs==4.3.8
+propcache==0.3.2
 psycopg2-binary==2.9.10
+pydantic==2.11.7
+pydantic_core==2.33.2
 python-dotenv==1.1.1
 sqlparse==0.5.3
+typing-inspection==0.4.1
+typing_extensions==4.14.1
+yarl==1.20.1
