--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -3,24 +3,30 @@ stages:
   - deploy
 
 variables:
-  PIP_CACHE_DIR: "$CI_PROJECT_DIR/.cache/pip"
+  POSTGRES_DB: mydb
+  POSTGRES_USER: user
+  POSTGRES_PASSWORD: password
+  DATABASE_URL: postgres://$POSTGRES_USER:$POSTGRES_PASSWORD@postgres:5432/$POSTGRES_DB
 
-cache:
-  paths:
-    - .cache/pip
+services:
+  - name: postgres:15
+    alias: postgres
+
+before_script:
+  - pip install --upgrade pip
+  - pip install -r requirements.txt
+  - python manage.py migrate
 
 test:
   stage: test
   image: python:3.11
-  before_script:
-    - pip install --upgrade pip
-    - pip install -r requirements.txt
   script:
-    - pytest
+    - pytest --disable-warnings --maxfail=1
 
 deploy:
   stage: deploy
+  image: python:3.11
   script:
-    - echo "Deploying..."
+    - echo "Deploy stage - add your deploy commands here"
   only:
     - main
