--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,6 @@
+pydrive2
+protobuf
+google-api-python-client
 aiofiles==24.1.0
 aiogram==3.22.0
 aiohappyeyeballs==2.6.1
@@ -5,9 +8,12 @@ aiohttp==3.12.15
 aiosignal==1.4.0
 annotated-types==0.7.0
 asgiref==3.9.1
+async-timeout==4.0.3
 attrs==25.3.0
+Babel==2.9.1
 black==25.1.0
 certifi==2025.8.3
+charset-normalizer==3.4.3
 click==8.2.1
 Django==5.2.5
 djangorestframework==3.16.1
@@ -24,6 +30,7 @@ psycopg2-binary==2.9.10
 pydantic==2.11.7
 pydantic_core==2.33.2
 python-dotenv==1.1.1
+pytz==2025.2
 sqlparse==0.5.3
 typing-inspection==0.4.1
 typing_extensions==4.14.1
